--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "AAS-Project",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --fix --ignore-path .gitignore"
+    "lint": "eslint . --fix --ignore-path .gitignore",
+    "dev": "vite",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "pinia": "^2.0.23",
+    "pwa": "^1.9.7",
+    "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
@@ -20,9 +23,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/cli-plugin-pwa": "~5.0.0",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "vite": "^4.2.0",
+    "vite-plugin-pwa": "^0.16.4",
     "vite-plugin-vuetify": "^1.0.0"
   }
 }
